--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 # 应用服务 WEB 访问端口
 server.port=8887
-
+github.client.id=a6b42dc8758b5ca4c457
+github.client.secret=3f37bf8927d5f13e1cb08372e9c7e271a7d75a85
+github.redirect.uri=http://localhost:8887/callback
