--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8887
 github.client.id=a6b42dc8758b5ca4c457
 github.client.secret=3f37bf8927d5f13e1cb08372e9c7e271a7d75a85
 github.redirect.uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
